Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.15.2
-
Fix Version/s: 5.15.9, 6.0.1, 6.1.0 Alpha
-
Component/s: Core: Date/Time
-
Labels:None
-
Environment:Android
-
Platform/s:
-
Commits:6ee13db700eecd8dfed54a9ec2d1081b39511562 (qt/qtbase/dev) 8b1194edea390f5608526a7f15cc562a3f17656b (qt/qtbase/6.0) 083e9fbca268938eaba72af07309adf1d902613a (qt/tqtc-qtbase/tqtc/lts-5.15)
Description
QTimeZone behaves badly on Android. Windows works as expected:
auto z = QTimeZone("America/Los_Angeles");
qDebug() << z.id(); // Returns "Pacific Daylight Time"
auto z2 = QTimeZone(z.id());
qDebug() << z2.id(); // Returns "GMT"!!!
z.id() should return a valid IANA code ("Pacific Daylight Time" is not correct).
This worked on 5.12.6, so something broke since then.
Did not see any other reports of this in the bug database.
Attachments
For Gerrit Dashboard: QTBUG-89905 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
329397,11 | Correct string comparison in Android's IANA ID matching code | dev | qt/qtbase | Status: MERGED | +2 | 0 |
330485,2 | Correct string comparison in Android's IANA ID matching code | 6.0 | qt/qtbase | Status: MERGED | +2 | 0 |
330588,2 | Correct string comparison in Android's IANA ID matching code | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |